[package]
name = "zbar-rust"
version = "0.0.8"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/zbar-rust"
homepage = "https://magiclen.org/zbar-rust"
keywords = ["zbar", "qrcode", "scanner", "barcode", "scan"]
categories = ["external-ffi-bindings", "encoding"]
description= "High-level and low-level ZBar binding for the Rust language."
readme = "README.md"
license = "LGPL-2.1"

[badges.travis-ci]
repository = "magiclen/zbar-rust"
branch = "master"

[dependencies]
libc = "0.2.43"
enum-ordinalize = "2.0.5"

[dev-dependencies]
qrcode-generator = "1.0.6"
image = "0.23"

[build-dependencies]
pkg-config = "0.3.14"