[package]
name = "zbar-rust"
version = "0.0.23"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.79"
repository = "https://github.com/magiclen/zbar-rust"
homepage = "https://magiclen.org/zbar-rust"
keywords = ["zbar", "qrcode", "scanner", "barcode", "scan"]
categories = ["external-ffi-bindings", "encoding"]
description = "High-level and low-level ZBar binding for the Rust language."
license = "LGPL-2.1"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "build.rs"]

[dependencies]
libc = "0.2.43"
enum-ordinalize = "4.2"

[dev-dependencies]
qrcode-generator = "4.1"
image = "0.25"

[build-dependencies]
pkg-config = "0.3.14"
